--- a/env.example
+++ b/env.example
@@ -7,3 +7,6 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Optional: Custom ports (defaults shown)
 # FRONTEND_PORT=3000
 # BACKEND_PORT=8000
+
+# Optional: Field Configuration
+# FIELD_CONFIG_FILE=/app/config/fields.json
